# scalpr

./: LICENSE  README.md  pyproject.toml
scalpr/: bot.py  options.py
scalpr/core/: constants.py  manager.py  message.py  prepare_db.py
scalpr/database/: candle.py  data.py  database.py  depth.py  factory.py  iterators.py  orderbook.py  symbol.py  ticker.py  timeframe.py  trade.py  window.py
scalpr/loops/: builder.py  consumer.py  coro_candle.py  coro_consumer.py  coro_user_input.py  director.py  factory.py  producers.py  shared_vars.py  state.py
scalpr/pipeline/: candle_pipe.py  depth_pipe.py  historical_candle_pipe.py  orderbook_pipe.py  pipe.py  ticker_pipe.py  trade_pipe.py
tests/: test_candle.py  test_database.py  test_depth.py  test_options.py  test_orderbook.py  test_prepare_db.py  test_symbol.py  test_ticker.py  test_timeframe.py  test_trade.py  test_window.py
